# hlinor-agent-registry

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  agent.yaml  index.html  pyproject.toml  registry.yaml
.github/workflows/: test.yml
docs/: approval-model.md  audit-trail.md  execution-model.md  runtime-receipts.md
docs/architecture/: control-layer-overview.md  department-handoff.md  market-intelligence-department.md  project-isolation.md  task-workspace.md
docs/patterns/: agent-lifecycle-operating-modes.md  autonomous-production-control-loop.md  capability-verification.md  evidence-bound-claims.md  execution-context-verification.md  lifecycle-mode-transition-gates.md  preflight-before-costly-action.md  prerequisite-acceptance-gate.md  production-action-boundary.md  protected-resource-boundary.md  repeated-failure-circuit-breaker.md
docs/policies/: dependency-reuse-policy.md  k16-email-gate-before-acceptance-invariant.md
examples/: budget_limited_research_agent.yaml  funding_intelligence.yaml  langchain_integration.py  search-agent.yaml  secure_financial_agent.yaml
examples/control-loops/: autonomous-production-control-loop.yaml  production-action-boundary.yaml  repeated-failure-stop.yaml
examples/evidence/: evidence-claim-check.yaml
examples/execution-context/: verified-host-native-execution-context.yaml
examples/lifecycle/: generic-agent-lifecycle-map.yaml  generic-lifecycle-receipt.yaml
examples/runtime/: approved-read-account-receipt.yaml  approved-read-customer-receipt.yaml  argument-digest-mismatch-receipt.yaml  denied-update-account-receipt.yaml  denied-update-customer-receipt.yaml
examples/runtime-governance/: cost-bounded-action-preflight.yaml  protected-resource-boundary.yaml  verified-capability.yaml
hlinor_registry/: __init__.py  cli.py  decision.py  policy_checker.py  validator.py
hlinor_registry/integrations/: __init__.py  langchain.py
registry/: README.md
registry/schema/: action-preflight.yaml  agent.yaml  audit-event.yaml  capability-verification.yaml  capability.yaml  department.yaml  evidence-claim-binding.yaml  execution-context.yaml  execution-receipt.yaml  failure-circuit-breaker.yaml  handoff.yaml  lifecycle-mode.schema.yaml  lifecycle-receipt.schema.yaml  lifecycle-transition.schema.yaml  policy.yaml  pre-dispatch-authorization-check.yaml  production-action-boundary.yaml  (+5 more)
scripts/: validate_k16_email_gate_invariant.py
tests/: test_capability_registration.py  test_compile.py  test_langchain_integration.py  test_policy_checker.py  test_validate_examples.py
(+6 files in other folders)
